--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
         <div class="section-title">
           <h2 class="Spanish">Conocimientos</h2>
           <h2 class="English">Knowledge</h2>
-          <p>Dentro de mis Conocimientos actuales se encuentra el manejo de una variedad de lenguajes de programación, manejo de software ofimatica y software de diseño grafico.</p>
+          <p class="Spanish">Dentro de mis Conocimientos actuales se encuentra el manejo de una variedad de lenguajes de programación, manejo de software ofimatica y software de diseño grafico.</p>
+          <p class="English">My knowledge can be resumed in use of multiple programming languages, office automation software and graphic design software</p>
         </div>
 
         <div class="row skills-content">
@@ -327,7 +328,8 @@
               <h4 class="Spanish">TSU en informatica</h4>
               <h4 class="English">Associates degree in computer science</h4>
               <h5>2020 - 2022</h5>
-              <h6>Culminación de la carga academica, en busca de pasantía</h6>
+              <h6 class="Spanish">Culminación de la carga academica, en busca de pasantía</h6>
+              <h6 class="English">Completion of the academic period, in search of an internship</h6>
               <p><em>UPTAMCA, Miranda, Los teques</em></p>
             </div>
             <!--<div class="resume-item">
