--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           <div class="col-lg-6">
             <div class="resume-item">
               <h4 class="Spanish">TSU en informatica</h4>
-              <h4 class="English">Associates degree in computer science</h4>
+              <h4 class="English">university higher technician in computer science</h4>
               <h5>2020 - 2022</h5>
               <h6 class="Spanish">Culminación de la carga academica, en busca de pasantía</h6>
               <h6 class="English">Completion of the academic period, in search of an internship</h6>
