--- a/index.html
+++ b/index.html
@@ -332,6 +332,13 @@
               <h6 class="English">Completion of the academic period, in search of an internship</h6>
               <p><em>UPTAMCA, Miranda, Los teques</em></p>
             </div>
+            
+            <div class="resume-item">
+              <h4 class="Spanish">Bachiller en ciencias</h4>
+              <h4 class="English">High School Graduate of Science</h4>
+              <h5>2015 - 2020</h5>
+              <p><em>UEP Santa Rosalía, Miranda, Guarenas</em></p>
+            </div>
             <!--<div class="resume-item">
               <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
               <h5>2010 - 2014</h5>
