--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <div class="col-lg-6 Spanish">
                 <ul>
                   <li ><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>19</span></li>
-                  <li ><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Guarenas - Miranda, Venezuela</span></li>
+                  <li ><i class="bi bi-chevron-right"></i> <strong>País:</strong> <span>Venezuela</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 Spanish">
@@ -147,7 +147,7 @@
               <div class="col-lg-6 English">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Guarenas - Miranda, Venezuela</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>Venezuela</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 English">
@@ -156,6 +156,14 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>manuel.aar.2020@gmail.com</span></li>
                 </ul>
               </div>
+            </div>
+            <div>
+              <p class="fst-italic Spanish">
+                Tengo la disponibilidad de trabajar de manera presencial en gran variedad de zonas de Miranda y Distrito Capital
+              </p>
+              <p class="fst-italic English">
+                I'm available for presential work in a wide variety of zones from the state of Miranda and Capital District
+              </p>
             </div>
             <div>
               <div class="Spanish">
