added english certificate

--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
             <div style="display: flex; justify-content: center; align-items: center;">
   
               <ul style="padding: 0;">
-                  <li class="Spanish"><i class="bi bi-chevron-right"></i><h4 class="lang"> Español (nativo)</h4></li>
+                  <li class="Spanish"><i class="bi bi-chevron-right"></i><h4 class="lang"> Español nativo</h4></li>
                   <li class="English"><i class="bi bi-chevron-right"></i><h4 class="lang"> Spanish (native)</h4></li>
 
-                  <li class="Spanish"><i class="bi bi-chevron-right"></i><h4 class="lang"> Ingles</h4></li>
-                  <li class="English"><i class="bi bi-chevron-right"></i><h4 class="lang"> English</h4></li>
+                  <li class="Spanish"><i class="bi bi-chevron-right"></i><h4 class="lang"> Ingles C2 (<a href="https://www.efset.org/cert/TFbZbc" target="_blank">certificado</a>)</h4></li>
+                  <li class="English"><i class="bi bi-chevron-right"></i><h4 class="lang"> English C2 (<a href="https://www.efset.org/cert/TFbZbc" target="_blank">certificate</a>)</h4></li>
               </ul>
 
             </div>
