--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="row">
               <div class="col-lg-6 Spanish">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span>+58 426 7766883</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span>+58 424 250 3389</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 Spanish">
